app/return_OS_Info/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-go
  namespace: default
spec:
  selector:
    app: sample-go
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
